# capstone

./: .gitignore  1215.txt  1229.txt  README.md  carla_regions_map_package_Maps_ces_ces_20251224_011231.yaml  filp_track.py  set_track_color.py  setup_env.sh
src/capstone_bringup/: CMakeLists.txt  package.xml
src/capstone_bringup/launch/: bev_id_teleporter_simple.launch  conflict_free_system_simple.launch  full_system_simple.launch  udp_ackermann_senders_simple.launch
src/capstone_visualization/: CMakeLists.txt  package.xml
src/capstone_visualization/scripts/: occupancy_grid_publisher.py
src/carla_camera_stream/: CMakeLists.txt  README.md  package.xml
src/carla_camera_stream/config/: map.rviz  positions.yaml
src/carla_camera_stream/launch/: click_coordinate.launch  spawn_cameras.launch  spawn_traffic_vehicles.launch
src/carla_camera_stream/scripts/: GlobalRoutePlanner.py  a.py  click_coordinate.py  spawn_cameras.py  spawn_cameras_n.py  spawn_single_camera.py  spawn_traffic_vehicles.py  yolop_da_head.py
src/carla_multi_vehicle_control/: CMakeLists.txt  package.xml
src/carla_multi_vehicle_control/launch/: udp_ackermann_senders_simple.launch
src/carla_multi_vehicle_control/msg/: TrafficApproach.msg  TrafficLightPhase.msg
src/carla_multi_vehicle_control/scripts/: bev_speed_override_pid.py  deadlock_token_manager.py  edge_lane_checker.py  reverse_parking_controller.py  simple_multi_vehicle_controller.py  simple_platoon_manager.py  simple_udp_ackermann_sender.py
src/carla_multi_vehicle_planner/: CMakeLists.txt  README.md  package.xml
src/carla_multi_vehicle_planner/config/: multi_vehicle_planner.rviz  roadmap.json
src/carla_multi_vehicle_planner/launch/: bev_id_teleporter.launch  bev_id_teleporter_simple.launch  carla_cleanup.launch  collision_avoidance_stack.launch  conflict_free_system.launch  conflict_free_system_simple.launch  full_system.launch  full_system_simple.launch  integrated_multi_vehicle_system.launch  manual_goal_tools.launch  multi_vehicle_autonomy.launch  predictive_collision_avoidance.launch  spawn_six_autopilot.launch  udp_ackermann_senders.launch  udp_ackermann_senders_simple.launch  ui.launch
src/carla_multi_vehicle_planner/launch/old/: bev_id_teleporter.launch  conflict_free_system.launch  full_system.launch  udp_ackermann_senders.launch  ui.launch
src/carla_multi_vehicle_planner/scripts/: bev_id_teleporter.py  bev_visualizer.py  cam_perspective.py  carla_cleanup.py  carla_manual_path_planner.py  carla_map_region_selector.py  carla_path_offset_region_editor.py  change_map.py  conflict_detector.py  destination_selector_gui.py  frenet.py  frenet_debug_visualizer.py  frenet_path.py  frenet_sd_visualizer.py  global_planner.py  global_route_planner_based_time.py  inference_recv.py  key_selector.py  manual_path_map_package_Maps_bigmap_bigmap_20251123_123413.yaml  multi_agent_conflict_free_planner.py  multi_vehicle_controller.py  multi_vehicle_spawner.py  networkx_path_planner.py  obstacle_planner.py  occupancy_grid_publisher.py  original.py  path_mux.py  path_relay.py  path_visualization.py  platoon_manager.py  platoon_monitor.py  predictive_conflict_manager.py  psipp_multi_agent_planner.py  rccar_udp_sender.py  roadmap_generator.py  rviz_click_teleporter.py  rviz_goal_mux.py  rviz_obstacle_manager.py  schedule_visualizer.py  setup_carla_path.py  (+12 more)
src/carla_multi_vehicle_planner/scripts/config/: edited_global_route.yaml  path_offset_regions.yaml  regions.yaml
src/carla_multi_vehicle_planner/scripts/experiments/: frenet_offset_visualizer.py
src/carla_multi_vehicle_planner/scripts/old/: bev_id_teleporter.py  carla_shutdown.py  inference_recv.py  multi_vehicle_controller.py  path_visualization.py  platoon_manager.py
src/carla_multi_vehicle_planner/scripts/tools/: carla_global_route_editor.py  carla_manual_path_planner.py  carla_map_region_selector.py  carla_path_offset_region_editor.py  rviz_person_spawner.py
src/ip_camera/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
src/ip_camera/config/: cameras.yaml  common.yaml  cyclonedds_shm.xml  ipcam.yaml  ipcam_1.yaml  ipcam_10.yaml  ipcam_11.yaml  ipcam_12.yaml  ipcam_13.yaml  ipcam_14.yaml  ipcam_2.yaml  ipcam_3.yaml  ipcam_4.yaml  ipcam_5.yaml  ipcam_6.yaml  ipcam_7.yaml  ipcam_8.yaml  ipcam_9.yaml  low_latency_config.yaml
src/ip_camera/include/ip_camera/: ip_camera_streamer.h  ip_camera_streamer.hpp  ip_camera_streamer_nodelet.hpp  rtsp_stream_manager.h  rtsp_stream_queue.h
src/ip_camera/launch/: gst_rtsp_ros.launch  ip_camera_nodelet.launch  ip_camera_single_streaming.launch.py  ip_camera_stream.launch  ip_camera_streamer.launch  ip_camera_streaming.launch.py  vigi_low_latency.launch
src/ip_camera/scripts/: bypass_buffer_camera.py  final_dual_camera.py  frenet.py  gst_rtsp_ros_streamer.py  ip_camera_streamer.py  low_latency_rtsp_streamer.py  optimize_system.sh  optimized_dual_camera.py  set_cam_info.py  set_homography.py  simple_dual_camera.py  ultra_low_latency_dual.py  vigi_c440i_ultra_low_latency.py
src/ip_camera/src/: ip_camera_node.cpp  ip_camera_streamer.cpp  ip_camera_streamer_nodelet.cpp  rtsp_stream_manager.cpp  rtsp_stream_queue.cpp
src/perception/: CMakeLists.txt  nodelet_plugins.xml  package.xml  의존성 관련 메모.txt
src/perception/include/: time_logger.h  timer.h
src/perception/include/perception/: Model.h  TAFv25.h  cuda_utils.h  model.h  perception_node.h  perception_nodelet.hpp  perception_single_node.h  preprocess.h  (+2 more)
src/perception/launch/: perception.launch  perception.launch.py  perception_batch_4.launch  perception_debug.launch  perception_nodelets.launch  perception_single.launch
src/perception/original_code/: perception_single_node.cpp  test.cpp  utils.hpp
src/perception/scripts/: heading_fuser.py  imu_uplink_receiver.py  inference_receiver.py  node.py  record_bev_path.py  taf.py  test.py  utils.py
src/perception/src/: Model.cpp  TAFv25.cpp  model.cpp  perception.cpp  perception_main.cpp  perception_node.cpp  perception_nodelet.cpp  perception_single.cpp  preprocess.cu  sort_tracker.cpp  test.cpp  timer.cpp  timer_logger.cpp  utils.hpp
(+99 files in other folders)
