<?xml version="1.0"?>
<package format="2">
  <name>carla_camera_stream</name>
  <version>1.0.0</version>
  <description>CARLA 고정 카메라 스트림 패키지</description>

  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>python3-numpy</exec_depend>

  <export>
  </export>
</package>

