<?xml version="1.0"?>
<package format="2">
  <name>carla_multi_vehicle_control</name>
  <version>0.1.0</version>
  <description>Controllers and command senders separated from carla_multi_vehicle_planner.</description>

  <maintainer email="maintainer@example.com">maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>ackermann_msgs</depend>

  <export/>
</package>


