<?xml version="1.0"?>
<package format="2">
  <name>perception</name>
  <version>0.1.0</version>
  <description>UDP-based perception ingest and heading fusion nodes for Capstone.</description>

  <maintainer email="okjsj0222@kookmin.ac.kr">ctrl</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>capstone_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>capstone_msgs</exec_depend>

  <export/>
</package>

